<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="35dp"
            android:layout_weight="2.5"
            android:padding="10dp"
            android:background="@drawable/carddesign"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="-80dp"
                        android:src="@drawable/ic_logo" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/uname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:textColor="@color/edtColor"
                        android:maxLength="50"
                        android:background="@drawable/editbackground"
                        android:maxLines="1" />

                    <EditText
                        android:layout_below="@+id/etUserName"
                        android:id="@+id/etUserPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/upass"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/edtColor"
                        android:background="@drawable/editbackground"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/iv_user_login"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/gradient_background"
                        android:text="@string/btnlogin"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/tv_or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_user_login"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:textColor="@color/edtColor"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_or"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/tvRegisterUser"
                        android:text="@string/txt_register"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/tv_or"
                        android:layout_centerInParent="true"
                        android:textColor="@color/edtColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>